Shapekey transfer cause the crash of blender #60401

Closed
opened 2019-01-10 19:39:00 +01:00 by AB · 13 comments

System Information
Operating system: Window 10 64bit
Graphics card: PNY Nvidia GTX 1060

Blender Version
Broken:
blender-2.80-80ffa73b3f87-win64

Short description of error
I attached a blend file that contains the problem , so basically i am trying to transfer shapekeys from a model named "Pattern" to another model named "Pattern1" that have no shapekeys that cause the crash of blender and outputs this in the console :

Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF76B4C0963
Module : C:\Users\test\Downloads\blender-2.80-80ffa73b3f87-win64\blender-2.80.0-git.80ffa73b3f87-windows64\blender.exe

This problem happens for those models only for some reason

Exact steps for others to reproduce the error
Selecting the model "Pattern" first then selecting the model "Pattern1"
On shapekeys panel i press on arrow and select "Transfer Shape key"
and it crashes

test.PNG

bug.blend

**System Information** Operating system: Window 10 64bit Graphics card: PNY Nvidia GTX 1060 **Blender Version** Broken: blender-2.80-80ffa73b3f87-win64 **Short description of error** I attached a blend file that contains the problem , so basically i am trying to transfer shapekeys from a model named "Pattern" to another model named "Pattern1" that have no shapekeys that cause the crash of blender and outputs this in the console : Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF76B4C0963 Module : C:\Users\test\Downloads\blender-2.80-80ffa73b3f87-win64\blender-2.80.0-git.80ffa73b3f87-windows64\blender.exe This problem happens for those models only for some reason **Exact steps for others to reproduce the error** Selecting the model "Pattern" first then selecting the model "Pattern1" On shapekeys panel i press on arrow and select "Transfer Shape key" and it crashes ![test.PNG](https://archive.blender.org/developer/F6243360/test.PNG) [bug.blend](https://archive.blender.org/developer/F6243363/bug.blend)
Author

Added subscriber: @MaTcHo0o

Added subscriber: @MaTcHo0o

#60249 was marked as duplicate of this issue

#60249 was marked as duplicate of this issue
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Member

Confirmed.

key->from is NULL here

1   rna_ShapeKey_data_begin                   rna_key.c         544  0x2d12194      
2   ShapeKey_data_begin                       rna_key_gen.c     445  0x2d1349d      
3   RNA_property_collection_begin             rna_access.c      3650 0x2ca2dba      
4   pyrna_prop_collection_iter_CreatePyObject bpy_rna.c         6606 0x23416a7      
5   pyrna_prop_collection_iter                bpy_rna.c         6613 0x23416d4      
6   PyObject_GetIter                                                 0x7ffff79777b6 
7   _PyEval_EvalFrameDefault                                         0x7ffff7a2feb2 
8   _PyEval_EvalCodeWithName                                         0x7ffff79748e6 
9   _PyFunction_FastCallKeywords                                     0x7ffff79bc931 
10  _PyEval_EvalFrameDefault                                         0x7ffff7a2f38c 
11  _PyEval_EvalCodeWithName                                         0x7ffff79748e6 
12  _PyFunction_FastCallKeywords                                     0x7ffff79bc931 
13  _PyEval_EvalFrameDefault                                         0x7ffff7a34436 
14  _PyEval_EvalCodeWithName                                         0x7ffff79748e6 
15  _PyFunction_FastCallDict                                         0x7ffff7975cab 
16  bpy_class_call                            bpy_rna.c         7926 0x2344428      
17  rna_operator_execute_cb                   rna_wm.c          1233 0x2e55e12      
18  wm_operator_invoke                        wm_event_system.c 1337 0x1c7744a      
19  wm_operator_call_internal                 wm_event_system.c 1534 0x1c77ad0      
20  WM_operator_name_call_ptr                 wm_event_system.c 1582 0x1c77cf3      
... <More>                                                                          

@mont29: is this for you?

Confirmed. `key->from` is NULL here ``` 1 rna_ShapeKey_data_begin rna_key.c 544 0x2d12194 2 ShapeKey_data_begin rna_key_gen.c 445 0x2d1349d 3 RNA_property_collection_begin rna_access.c 3650 0x2ca2dba 4 pyrna_prop_collection_iter_CreatePyObject bpy_rna.c 6606 0x23416a7 5 pyrna_prop_collection_iter bpy_rna.c 6613 0x23416d4 6 PyObject_GetIter 0x7ffff79777b6 7 _PyEval_EvalFrameDefault 0x7ffff7a2feb2 8 _PyEval_EvalCodeWithName 0x7ffff79748e6 9 _PyFunction_FastCallKeywords 0x7ffff79bc931 10 _PyEval_EvalFrameDefault 0x7ffff7a2f38c 11 _PyEval_EvalCodeWithName 0x7ffff79748e6 12 _PyFunction_FastCallKeywords 0x7ffff79bc931 13 _PyEval_EvalFrameDefault 0x7ffff7a34436 14 _PyEval_EvalCodeWithName 0x7ffff79748e6 15 _PyFunction_FastCallDict 0x7ffff7975cab 16 bpy_class_call bpy_rna.c 7926 0x2344428 17 rna_operator_execute_cb rna_wm.c 1233 0x2e55e12 18 wm_operator_invoke wm_event_system.c 1337 0x1c7744a 19 wm_operator_call_internal wm_event_system.c 1534 0x1c77ad0 20 WM_operator_name_call_ptr wm_event_system.c 1582 0x1c77cf3 ... <More> ``` @mont29: is this for you?

Seems to be exact same issue as #60249, so answer will be the same. :)

That file is invalid (NULL back-pointer from shape key to its owner geometry). Afraid we cannot do much unless we get precise reproducible steps to create such a file.

Two people getting same exact issue “that should not happen” is kinda serious, so would be really nice to know how those invalid files can be generated. :|

Seems to be exact same issue as #60249, so answer will be the same. :) That file is invalid (NULL back-pointer from shape key to its owner geometry). Afraid we cannot do much unless we get precise reproducible steps to create such a file. Two people getting same exact issue “that should not happen” is kinda serious, so would be really nice to know how those invalid files can be generated. :|
Author

Ok will try to use some backup that i have of the files and look for how those file get generated and do some debugging .
This python command also cause the crash : "C.object.data.shape_keys.key_blocks- [x].relative_key.data[vertex_index]" i don't know if this helps to give any idea about the source of the issue .

Ok will try to use some backup that i have of the files and look for how those file get generated and do some debugging . This python command also cause the crash : "C.object.data.shape_keys.key_blocks- [x].relative_key.data[vertex_index]" i don't know if this helps to give any idea about the source of the issue .
Author

And i didn't get any message of the response you did on my email for some reason

And i didn't get any message of the response you did on my email for some reason

@MaTcHo0o source of the issue in current file is very well known (NULL pointer that should never be NULL, ever). Many different kind of accesses/operations on shapekeys will henceforth crash Blender. So current file is corrupted. Question is, how to get to that point? ;)

PS: some mail services/client tend to tag messages from this tool/website as spam, this could explain your lack of mail notification maybe.

@MaTcHo0o source of the issue in current file is very well known (NULL pointer that should never be NULL, ever). Many different kind of accesses/operations on shapekeys will henceforth crash Blender. So current file is corrupted. Question is, how to get to that point? ;) PS: some mail services/client tend to tag messages from this tool/website as spam, this could explain your lack of mail notification maybe.
Author

@mont29 I believe i found why it happens to those models ,so basically if you have a model with no shapekey at all not even the basis if you used the "apply as shapekey" from simple deform modifier for example the basis created from this will be corrupted and will cause the crash of blender when you try an operation related to it , but if the model have a basis and you click on "apply as shapekey" from simple deform modifier for example it will work with no problem .
So i think the basis created from apply as shapekey of a modifier is corrupted .

Please let me know if this is correct and if it have a workaround to make it work because i have a model for a client with 8 shapekeys that have the same problem and want to know should i recreate everything from scratch or wait for a solution.

@mont29 I believe i found why it happens to those models ,so basically if you have a model with no shapekey at all not even the basis if you used the "apply as shapekey" from simple deform modifier for example the basis created from this will be corrupted and will cause the crash of blender when you try an operation related to it , but if the model have a basis and you click on "apply as shapekey" from simple deform modifier for example it will work with no problem . So i think the basis created from apply as shapekey of a modifier is corrupted . Please let me know if this is correct and if it have a workaround to make it work because i have a model for a client with 8 shapekeys that have the same problem and want to know should i recreate everything from scratch or wait for a solution.

Thanks, can confirm indeed, in fact we are setting C.object.data.shape_keys.user to evaluated (hence temp, never saved) version of the object, instead of the actual original object (that’s thanks to CoW ;) ). Should be easy to fix.

Thanks, can confirm indeed, in fact we are setting C.object.data.shape_keys.user to **evaluated** (hence temp, never saved) version of the object, instead of the actual original object (that’s thanks to CoW ;) ). Should be easy to fix.

Added subscriber: @ngzaharias

Added subscriber: @ngzaharias

This issue was referenced by 47be4e9a33

This issue was referenced by 47be4e9a337931f38e7b3ef903df3592ed239b0d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60401
No description provided.